@@ -1,3 +1,8 @@
+2007-08-20  Raffaele Sandrini  <raffaele@sandrini.ch>
+
+	* vala/valasemanticanalyzer.vala: enclose prefix increment and decrement unary
+	  expressions transformend to binary expressions into parenthesis
+
 2007-08-20  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valasemanticanalyzer.vala: report error and fix critical to
